<resources>
    <string name="app_name">Edoo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_sendAll">Gửi thông báo</string>
    <string name="action_post">Đăng</string>


    <string name="hint_email">Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="hint_name">Họ và tên</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="btn_register">ĐĂNG KÍ</string>
    <string name="btn_link_to_register">Chưa có tài khoản? <u><b>Đăng kí ngay</b></u>.</string>
    <string name="btn_link_to_login">Đã có tài khoản? <u><b>Đăng nhập ngay</b></u>.</string>
    <string name="welcome">Chào mừng</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="name">Họ và tên</string>
    <string name="hint_repassword">Nhập lại mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng kí</string>
    <string name="lopmonhoc">Lớp môn học</string>
    <string name="lopkhoahoc">Lớp khoá học</string>
    <string name="covanlop">Cố vấn lớp</string>
    <string name="register_lopkhoahoc">Lớp khoá học(vd: K58CLC, ...)</string>
    <string name="tienich">Tiện ích</string>
    <string name="taikhoan">Tài khoản</string>
    <string name="share">Chia sẻ</string>
    <string name="setting">Cài đặt</string>
    <string name="logout">Đăng xuất</string>
    <string name="nhom">Nhóm</string>
    <string name="tkb">Thời khoá biểu</string>
    <string name="done">Hoàn tất</string>
    <string name="editActivity">Chỉnh sửa thông tin cá nhân</string>
    <string name="hint_mssv">Mã số sinh viên</string>
    <string name="hint_msgv">Mã số giảng viên</string>
    <string name="updateAccount">Cập nhật tài khoản</string>


    <string name="thoi_khoa_bieu">Thời khóa biểu</string>
    <string name="title_activity_write_post">WritePostActivity</string>
    <string name="title_activity_post_writer">Đăng bài</string>
    <string name="author_name">Trần Đức Hùng</string>
    <string name="title_post">Hỏi thông tin bài tập</string>
    <string name="content_post">Mình muốn hỏi bài tập JAVA hôm nay phải làm những gì thế ạ? Mình cám ơn nhiều :)</string>
    <string name="comment_author">Bạn phải làm bài 20 21 22 ở trong sách giáo khoa cô có cho mà</string>
    <string name="question_post">Hãy đặt câu hỏi ...</string>
    <string name="title_post_hint">Tiêu đề</string>
    <string name="content_hint">Nội dung</string>
    <string name="title_post2">Tiêu đề</string>
    <string name="type_post">Loại post</string>
    <string name="type_post_question">Question</string>
    <string name="type_post_note">Note</string>
    <string name="type_post_poll">Poll</string>
    <string name="type_post_notification">Notification</string>
    <string name="title_content2">Nội dung</string>
    <string name="lichthi">Lịch Thi</string>
    <string name="tailieu">Tài Liệu</string>
    <string name="diemtongket">Điểm tổng kết</string>
    <string name="postDetailActivity">Chi tiết bài đăng</string>
    <string name="locbaidang">Lọc bài đăng giáo viên</string>
    <string name="locbaidangchuatraloi">Lọc theo bài đăng chưa trả lời</string>
    <string name="post">Đăng bài</string>
    <string name="tatcabaidang">Tất cả bài đăng</string>
    <string name="feed">Bảng tin</string>
    <string name="time_post">18/10/15</string>
    <string name="lophoc">Lớp học</string>
    <string name="timeline_activity">Bài đăng</string>
    <string name="locbaidangchuadoc">Lọc bài chưa đọc</string>
    <string name="description">Một số thông tin</string>

    <string name="link">Link</string>
    <string name="link_title">Title</string>
    <string name="dialog_title_insert_link">Thêm link</string>
    <string name="insert">Thêm</string>
    <string name="warn">Cảnh báo</string>
    <string name="go_back">Quay lại</string>
    <string name="warn_exit">Thoát và hủy bài viết?</string>
    <string name="post_incognito">Đăng ở chế độ ẩn danh</string>
    <string name="anonymous">Anonymous</string>
    <string name="next">Kế tiếp</string>


    <string name="txt_gallery">Gallery</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_solved">Solved</string>
    <string name="txt_not_solved">Not solved</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="lert_press_back">Nhấn lần nữa để thoát</string>


</resources>
