<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/lophoc">
        <menu>
            <group android:checkableBehavior="single">

                <!--<item-->
                <!--android:id="@+id/nav_feed"-->
                <!--android:icon="@mipmap/ic_feed_24_2"-->
                <!--android:title="@string/feed" />-->

                <item
                    android:id="@+id/nav_lopMonHoc"
                    android:icon="@mipmap/ic_subject"
                    android:title="@string/lopmonhoc" />
                <!--<item-->
                <!--android:id="@+id/nav_lopKhoaHoc"-->
                <!--android:icon="@mipmap/ic_key"-->
                <!--android:title="@string/lopkhoahoc" />-->

                <!--<item-->
                <!--android:id="@+id/nav_nhom"-->
                <!--android:icon="@mipmap/ic_nhom"-->
                <!--android:title="@string/nhom" />-->
            </group>
        </menu>
    </item>

    <item android:title="@string/tienich">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_thoikhoabieu"
                    android:icon="@mipmap/ic_thoikhoabieu"
                    android:title="@string/tkb" />
                <!--<item-->
                    <!--android:id="@+id/nav_lichThi"-->
                    <!--android:icon="@mipmap/ic_nhom"-->
                    <!--android:title="@string/lichthi"/>-->
                <!--<item-->
                    <!--android:id="@+id/nav_taiLieu"-->
                    <!--android:icon="@mipmap/ic_folder_24"-->
                    <!--android:title="@string/tailieu"/>-->
                <!--<item-->
                    <!--android:id="@+id/nav_diemTongKet"-->
                    <!--android:icon="@mipmap/ic_nhom"-->
                    <!--android:title="@string/diemtongket"/>-->
            </group>
        </menu>
    </item>

    <item android:title="@string/taikhoan">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_updateAccount"
                    android:checkable="false"
                    android:icon="@mipmap/ic_user"
                    android:title="@string/updateAccount" />
                <item
                    android:id="@+id/nav_share"
                    android:checkable="false"
                    android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/share" />
                <!--<item-->
                    <!--android:id="@+id/nav_setting"-->
                    <!--android:icon="@mipmap/ic_setting"-->
                    <!--android:title="@string/setting" />-->
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@mipmap/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>